<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button"/>
        <Button
            android:id="@+id/artist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_button"/>
        <Button
            android:id="@+id/album_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_button"/>

        <Button
            android:id="@+id/store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_button"/>
        <Button
            android:id="@+id/playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_button"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_2" />
</LinearLayout>
